--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.12.4'
+
     - name: Install dependencies
       run: |
         pip install --upgrade pip
@@ -29,22 +30,58 @@ jobs:
       run: |
         pytest Algoritmogenetico/tests --maxfail=1 --disable-warnings
 
-  deploy:
-    needs: test  # Il job di deploy si avvia solo se il test job ha successo
+  package:
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Deploy to Server
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-      run: |
-        echo "${SSH_PRIVATE_KEY}" > ssh_key
-        chmod 600 ssh_key
-        rsync -avz -e "ssh -i ssh_key -o StrictHostKeyChecking=no" Algoritmogenetico/ user@server:/path/to/deployment/
-        ssh -i ssh_key -o StrictHostKeyChecking=no user@server "cd /path/to/deployment && pip install -r requirements.txt && systemctl restart myapp"
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12.4'
 
-    - name: Clean up
-      run: rm ssh_key
+    - name: Install dependencies
+      run: |
+        pip install --upgrade pip
+        pip install -r Algoritmogenetico/requirements.txt
+
+    - name: Package the application
+      run: |
+        mkdir -p dist
+        cp -r Algoritmogenetico dist/
+        cd dist && tar -czf myapp.tar.gz Algoritmogenetico
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: myapp
+        path: dist/myapp.tar.gz
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: package
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Download artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: myapp
+
+    - name: Create GitHub Release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: v1.0.0  # Puoi rendere dinamico questo tag in base alla versione
+        release_name: Release v1.0.0
+        draft: false
+        prerelease: false
+        body: |
+          This is the first release of the application.
+      files: dist/myapp.tar.gz
