--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,10 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: myapp
+        path: dist/
 
     - name: Create GitHub Release
+      id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -84,4 +86,11 @@ jobs:
         prerelease: false
         body: |
           This is the first release of the application.
-      files: dist/myapp.tar.gz
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: dist/myapp.tar.gz
+        asset_name: myapp.tar.gz
+        asset_content_type: application/gzip
