--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
 
   package:
     runs-on: ubuntu-latest
-    needs: test
+    if: always()  
 
     steps:
     - name: Checkout code
@@ -62,7 +62,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: package
+    if: always() 
 
     steps:
     - name: Checkout code
@@ -80,7 +80,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v1.0.0  # Puoi rendere dinamico questo tag in base alla versione
+        tag_name: v1.0.0  
         release_name: Release v1.0.0
         draft: false
         prerelease: false
