--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,36 +61,47 @@ jobs:
         path: dist/myapp.tar.gz
 
   deploy:
-    runs-on: ubuntu-latest
-    if: always() 
+  runs-on: ubuntu-latest
+  if: always()
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+  steps:
+  - name: Checkout code
+    uses: actions/checkout@v3
 
-    - name: Download artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: myapp
-        path: dist/
+  - name: Delete existing release
+    env:
+      GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+    run: |
+      curl -X DELETE \
+        -H "Authorization: token ${{ secrets.MY_GITHUB_TOKEN }}" \
+        "https://api.github.com/repos/${{ github.repository }}/git/refs/tags/v1.0.0"
+      curl -X DELETE \
+        -H "Authorization: token ${{ secrets.MY_GITHUB_TOKEN }}" \
+        "https://api.github.com/repos/${{ github.repository }}/releases/tags/v1.0.0"
 
-    - name: Create GitHub Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-      with:
-        tag_name: v1.0.0  
-        release_name: Release v1.0.0
-        draft: false
-        prerelease: false
-        body: |
-          This is the first release of the application.
+  - name: Download artifact
+    uses: actions/download-artifact@v3
+    with:
+      name: myapp
+      path: dist/
 
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: dist/myapp.tar.gz
-        asset_name: myapp.tar.gz
-        asset_content_type: application/gzip
+  - name: Create GitHub Release
+    id: create_release
+    uses: actions/create-release@v1
+    env:
+      GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+    with:
+      tag_name: v1.0.0
+      release_name: Release v1.0.0
+      draft: false
+      prerelease: false
+      body: |
+        This is the updated release.
+
+  - name: Upload Release Asset
+    uses: actions/upload-release-asset@v1
+    with:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+      asset_path: dist/myapp.tar.gz
+      asset_name: myapp.tar.gz
+      asset_content_type: application/gzip
