--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,16 +68,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Delete existing release
+    - name: Delete existing release (if exists)
       env:
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
       run: |
-        curl -X DELETE \
-          -H "Authorization: token ${{ secrets.MY_GITHUB_TOKEN }}" \
-          "https://api.github.com/repos/${{ github.repository }}/git/refs/tags/v1.0.0"
-        curl -X DELETE \
-          -H "Authorization: token ${{ secrets.MY_GITHUB_TOKEN }}" \
-          "https://api.github.com/repos/${{ github.repository }}/releases/tags/v1.0.0"
+        TAG_EXISTS=$(git ls-remote --tags origin | grep refs/tags/v1.0.0 | wc -l)
+        if [ $TAG_EXISTS -eq 1 ]; then
+          curl -X DELETE \
+            -H "Authorization: token ${{ secrets.MY_GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/git/refs/tags/v1.0.0"
+          curl -X DELETE \
+            -H "Authorization: token ${{ secrets.MY_GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/releases/tags/v1.0.0"
+        fi
 
     - name: Download artifact
       uses: actions/download-artifact@v3
